Fix title size on mobile

--- a/docs/assets/styles/main.css
+++ b/docs/assets/styles/main.css
@@ -320,7 +320,7 @@ p + p {
   position: relative;
   padding: 20px;
   font-family: var(--font-family-titles);
-  font-size: 8rem;
+  font-size: 7rem;
   font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
